--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -11,13 +11,23 @@ body {
 
 	.menu {
 		display: flex;
-		justify-content: space-between;
 		.list {
+			margin-left: 50px;
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
-			width: 400px;
+			width: 220px;
 			margin-right: 300px;
+			cursor: pointer;
+			
+			div {
+				transition: all 0.25s;
+				font-size: 18px;
+
+				&:hover {
+					color: #e74c3c;
+				}
+			}
 		}
 	}
 }
@@ -110,4 +120,25 @@ body {
 			}
 		}
 	}		
+}
+
+.error {
+	width: 400px;
+	margin: auto;
+	text-align: center;	
+
+	img {
+		height: 100px;
+	}
+
+	h1 {
+		padding-top: 10px;
+		font-weight: bold;
+		color: #e74c3c;
+	}
+
+	.text {
+		color: #e74c3c;
+		padding-top: 5px;
+	}
 }
