--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -3,7 +3,7 @@ body {
 }
 .wrapper {
 	margin: auto;
-	width: 1440px;
+	width: 1000px;
 }
 .header {
 	width: 100%;
@@ -41,14 +41,28 @@ body {
 
 	img {
 		height: 200px;
+		width: 200px;
 		border-radius: 20px;
+		background-color: #494949;
 	}
 
 	.planet-info {
 		margin-left: 30px;
+		width: 300px;
 
-		h1 {
-			font-size: 30px;
+		.header {
+			display: flex;
+			justify-content: space-between;
+
+			h1 {
+				font-size: 30px;
+			}
+
+			i {
+				font-size: 20px;
+				color: rgb(52,152,219);
+				cursor: pointer;
+			}
 		}
 
 		.info {
@@ -72,12 +86,25 @@ body {
 	border-radius: 10px;
 	box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.2);
 	padding: 10px;
-	width: 65%;
+	width: 50%;
+	position: relative;
+
+	.spin {
+		position: absolute;
+		top: 30%;
+		left: 50%;
+	}
 
 	.item-name {
 		padding: 10px 20px;
 		font-size: 20px;
 		border-bottom: 1px solid #494949;
+		border-radius: 5px;
+		transition: all 0.2s;
+		
+		&:hover {
+			background-color: #5d5d5d;
+		}
 
 		&:last-child {
 			border: none;
@@ -98,6 +125,7 @@ body {
 	box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.2);
 	margin-top: 50px;
 	width: 400px;
+	height: 240px;
 
 	img {
 		height: 200px;
